# e-comm

./: .env  .gitignore  README.md  prompt.ipynb  prototype.ipynb  pyproject.toml
notebooks/: prototype.ipynb
prototype/: full.ipynb  main.ipynb  simple.ipynb
src/: extract_data.py  recommend_basic.py  recommend_embedding.py  recommender.py
